- fixed layout issues with murmur - added id to each murmur

--- a/assets/stylesheets/murmur-chat.css
+++ b/assets/stylesheets/murmur-chat.css
@@ -34,6 +34,10 @@
     padding: 10px;
 }
 
+#clear {
+    clear: both;
+}
+
 .new-murmur {
     width: 400px;
 }
